--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
-title: Mantas's homepage
+title: Mantas homepage
 description: I Write C code in Neovim using custom split Colemak keyboard
